feature(add logs + alert)
