# backend/ms_process/main.js
@@ -3,6 +3,7 @@ const express = require("express");
 const cors = require("cors");
 const bodyParser = require("body-parser");
 const processRouter = require("./controllers/processController");
+const processTestRouter = require("./controllers/processTestController");
 const allowRequest = require("./middlewares/allowRequest");
 const sequelize = require("./config/db");
 const fs = require("fs");
@@ -13,6 +14,7 @@ const port = process.env.PORT;
 
 app.use(cors());
 app.use(bodyParser.json());
+app.use(allowRequest);
 app.use(express.urlencoded({ extended: true }));
 
 const swaggerDocument = JSON.parse(
@@ -24,6 +26,8 @@ app.use("/swagger.json", (req, res) => {
   res.send(swaggerDocument);
 });
 
+
+app.use("/test", processTestRouter);
 app.use("/", processRouter);
 
 sequelize
